--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<html>
 <head>
-<title>Andres Bautista Portafolio</title>
+  <title>Andres Bautista Portafolio</title>
 </head>
 <body>
-<h1>
-  Andres Bautista
-</h1>
+  <h1>
+    Andres Bautista
+  </h1>
 </body>
 <footer>
 </footer>
+</html>
