--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
-<html>
-<head>
-  <title>Andres Bautista Portafolio</title>
-</head>
-<body>
-  <h1>
-    Andres Bautista
-  </h1>
-</body>
-<footer>
-</footer>
+<!doctype html>
+<html lang="es">
+  <header>
+    <title>Andres Bautista Portafolio</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="FaviconIcon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut" href="favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="widht=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="name" content=Andres Bautista Portafolio">
+    <meta name="robots" content="noindex, nofollow">
+  </header>
+  <body>
+    <img src="images/banner.jpg" width="75%" alt="banner">
+    <h1>Andres Bautista</h1>
+    <h2>Acerca de mi:</h2>
+    <p>Desarrollador novato, con conocimientos en HTML, CSS, JavaScript (JQuery, React), PHP, Java, C++ y bases de datos SQL.</p>
+    <p>Ingeniero en Telecomunicaciones de la Universidad de Pamplona, Villa del Rosario, Colombia.</p>
+    <h2>Credenciales y Portafolio</h2>
+    <p><a href="resume.html">Algo mas...</a> | <a href="https://github.com/AndresCBP">Mi GitHub</a></p>
+    <h2>Contacto:</h2>
+    <p>Email: <a href="mailto:andres.camilo.bautista.posse@gmail.com">andres.camilo.bautista.posse@gmail.com</a></p>
+  </body>
+  <footer>
+    <hr>
+    <code>Copyright (c) 2020 Andres Bautista</code>
+  </footer>
 </html>
