--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="images/banner.jpg" width="75%" alt="banner">
     <h1>Andres Bautista</h1>
     <h2>Acerca de mi:</h2>
-    <p>Desarrollador novato, con conocimientos en HTML, CSS, JavaScript (JQuery, React), PHP, Java, C++ y bases de datos SQL.</p>
+    <p>Desarrollador con conocimientos en HTML, CSS, JavaScript (JQuery, React), PHP, Java, C++ y bases de datos SQL.</p>
     <p>Ingeniero en Telecomunicaciones de la Universidad de Pamplona, Villa del Rosario, Colombia.</p>
     <h2>Credenciales y Portafolio</h2>
     <p><a href="resume.html">Algo mas...</a> | <a href="https://github.com/AndresCBP">Mi GitHub</a></p>
